fix html formatting, and adjust margins to eliminate horizontal scrollbar and phone screen width pixel adjustments

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@ body {
     color: #fff;
     margin: 0;
     padding: 0;
+    display: block;
 }
 
 .front-text {
